2010-01-03  Michal Nazarewicz  <mina86/AT/mina86.com>

	* getlyrics.pl: + incorporated lyrics retrieving code code by Minio

2009-12-12  Michal Nazarewicz  <mina86/AT/mina86.com>

	* installkernel: + --*config is now sysnonym of --config=*config

2009-12-12  Michal Nazarewicz  <mina86/AT/mina86.com>

	* Makefile: + fixed 'package' target

2009-11-25  Michal Nazarewicz  <mina86/AT/mina86.com>

	* mkpkg: + updated to create .txz packages

2009-08-31  Michal Nazarewicz  <mina86/AT/mina86.com>

	* installkernel: + fixed --jobs argument handling

2009-08-30  Michal Nazarewicz  <mina86/AT/mina86.com>

	* installkernel: + added --jobs option
	+ fixed incorrect .version being read when --out used
	+ fixed bug with --su when SHELL pointed to zsh

2009-06-24  Michal Nazarewicz  <mina86/AT/mina86.com>

	* lesspipe: + fixed bug where compressed files were not decompressed

2009-06-14  Michal Nazarewicz  <mina86/AT/mina86.com>

	* gz2bz: + added possibility to save uncompressed files in
	specified directory (think /tmp)
	+ changed meaning of -K (is now --keep-gz, was --keep-both)

2009-05-22  Michal Nazarewicz  <mina86/AT/mina86.com>

	* lesspipe: + added lzma and xz support

	* installkernel, installkernel.8: + added -o parameter

2009-05-09  Michal Nazarewicz  <mina86/AT/mina86.com>

	* quotes.txt: + converted to UTF-8

	* mpd-show.c: + uses fwrite() instead of write(), etc.

2009-04-14  Michal Nazarewicz  <mina86/AT/mina86.com>

	* tpwd: + added --zsh option

	* genpass.sh: + increased portability
	+ added sha1sum as an alternative if md5sum is missing

	* rand-files.pl: + partially rewritten
	+ added ranking
	+ removed "find" functionality (TODO)

	* installkernel: + fixed bug where "su" was interpreted as "-su"
	when "--" was in effect

2009-04-11  Michal Nazarewicz  <mina86/AT/mina86.com>

	cdiff.c: + added isatty() checking (no colors if stdout is not a TTY)

2008-11-08  Michal Nazarewicz  <mina86/AT/mina86.com>
